# notepad2-mod

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt
res/: Notepad2.exe.manifest.in
src/: CMakeLists.txt  Dialogs.cpp  Dlapi.cpp  Edit.c  Edit.cpp  Edit.h  Helpers.cpp  Helpers.h  Notepad2.c  Notepad2.cpp  Notepad2.h  Notepad2.rc  Notepad2.vcxproj  Print.cpp  SciCall.h  Styles.c  Styles.cpp  Styles.h  Version.h  Version.h.in
tools/: np2_get_version.cmake
